# CivilPulse-AI

./: .env.example  .env.production.example  .gitignore  CivicPulse_Project_Brief.txt  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260624_01_initial_schema.py  20260625_02_add_image_mime.py  20260626_03_security_reliability_indexes.py  20260626_04_add_civic_operations_reports.py  20260627_05_add_areas.py  20260627_06_add_area_score_events.py  20260627_07_add_missions.py  20260628_08_add_duplicate_issue_lifecycle.py  20260629_09_add_issue_coordinates.py
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py
backend/app/core/: config.py  errors.py  logging.py  request_context.py
backend/app/db/: __init__.py  migrations.py  session.py
backend/app/domain/: __init__.py  areas.py  enums.py  issue_duplicates.py  mission_titles.py  missions.py
backend/app/middleware/: request_id.py
backend/app/models/: __init__.py  admin_session.py  area.py  area_score_event.py  civic_operations_report.py  community_action.py  issue.py  issue_draft.py  issue_update.py  mission.py  mission_action.py  types.py
backend/app/repositories/: __init__.py  admin.py  admin_issues.py  areas.py  issues.py  missions.py  operations.py  reports.py
backend/app/schemas/: __init__.py  admin.py  areas.py  common.py  coordinates.py  errors.py  health.py  issues.py  missions.py  operations.py
backend/app/services/: __init__.py  admin.py  admin_auth.py  ai.py  anonymous_actor.py  (+15 more)
backend/scripts/: __init__.py  cleanup_abandoned_data.py  hash_admin_password.py  seed_demo.py  smoke_deployment.py
backend/tests/: conftest.py  test_acceptance_flow.py  test_admin_auth.py  test_admin_repository.py  test_admin_routes.py  test_admin_service.py  test_ai_service.py  test_anonymous_actor.py  test_area_explanations.py  test_area_routes.py  test_area_scores.py  test_areas.py  test_config.py  test_health.py  test_images.py  test_issue_repository.py  test_issue_routes.py  test_issue_service.py  test_migrations.py  test_mission_generation.py  test_mission_refinement.py  test_mission_routes.py  test_missions.py  test_models.py  test_operations_acceptance.py  test_operations_ai.py  test_operations_repository.py  test_operations_schemas.py  test_operations_service.py  test_report_routes.py  test_report_service.py  test_schemas.py
(+129 files in other folders)
